tests/test_scope/bad/scope_call_duplicate.catala_en
```catala
declaration scope Toto:
  context bar content integer
  input baz content decimal
  output foo content integer

scope Toto:
  definition bar equals 1
  definition foo equals 1212 + bar

declaration scope Titi:
  output fizz content Toto
scope Titi:
  definition fizz equals output of Toto with {--bar: 1 --baz: 2.1 -- bar: 3}
```

```catala-test-inline
$ catala dcalc -s Titi
[ERROR]
Duplicate definition of scope input variable 'bar'

┌─⯈ scope_call_duplicate.catala_en:14.70-14.73:
└──┐
14 │   definition fizz equals output of Toto with {--bar: 1 --baz: 2.1 -- bar: 3}
   │                                                                      ‾‾‾
#return code 123#
```
